@@ -21,6 +21,7 @@ import java.io.Reader;
 import java.text.BreakIterator;
 import java.util.Locale;
 
+import org.apache.lucene.analysis.Token;
 import org.apache.lucene.analysis.tokenattributes.CharTermAttribute;
 import org.apache.lucene.analysis.tokenattributes.OffsetAttribute;
 import org.apache.lucene.analysis.util.CharArrayIterator;
@@ -60,7 +61,7 @@ public class ThaiTokenizer extends SegmentingTokenizerBase {
   
   /** Creates a new ThaiTokenizer */
   public ThaiTokenizer(Reader reader) {
-    this(AttributeFactory.DEFAULT_ATTRIBUTE_FACTORY, reader);
+    this(Token.TOKEN_ATTRIBUTE_FACTORY, reader);
   }
       
   /** Creates a new ThaiTokenizer, supplying the AttributeFactory */
