@@ -196,7 +196,7 @@ public final class JapaneseTokenizer extends Tokenizer {
    * @param mode tokenization mode.
    */
   public JapaneseTokenizer(Reader input, UserDictionary userDictionary, boolean discardPunctuation, Mode mode) {
-    this(AttributeFactory.DEFAULT_ATTRIBUTE_FACTORY, input, userDictionary, discardPunctuation, mode);
+    this(org.apache.lucene.analysis.Token.TOKEN_ATTRIBUTE_FACTORY, input, userDictionary, discardPunctuation, mode);
   }
 
   /**
